@@ -1,3 +1,6 @@
+2006-11-08
+	* Fix handling of URL escapes in username.
+
 2006-11-04
 	* Fix bug 1579311 (and a million others), eBay changed the bid history
 	  page again.
